# authorisations

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.new  Dockerfile.old  Dockerfile__  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  azure-pipelines.yml  file-attachments.md  installation.md
.github/: copilot-instructions.md
_Dockerfiles/: mooringlicensing.Dockerfile
backend/: .dockerignore  .env.template  .gitignore  conftest.py  entrypoint.sh  home.py  manage.py  pyproject.toml  sleep.py
backend/animal_ethics/: .my_pgpass  asgi.py  settings.py  urls.py
backend/animalethics/: asgi.py  settings.py  urls.py  wsgi.py
backend/api/: forms.py  models.py  serialisers.py  tests.py  urls.py  views.py
backend/api/tests/: conftest.py  test_applications_api.py  test_assessment_api.py  test_attachments_api.py  test_client_config.py  test_processes_api.py  test_questionnaires_api.py  test_security_nondisclosure_api.py
backend/applications/: admin.py  forms.py  models.py  prince.py  schema.py  serialisers.py  test_prince.py  test_views_security.py  tests.py  urls.py  views.py
backend/applications/migrations/: 0001_initial.py  0002_applicationattachment.py  0003_alter_application_status.py
backend/applications/templatetags/: my_filters.py
backend/authorisations/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/: asgi.py  cache_control_middleware.py  dashboard.py  settings.py  storage.py  test_settings.py  urls.py  wsgi.py
backend/dbnow/: apps.py  urls.py  views.py
backend/e2e/: README.md  conftest.py
backend/e2e/fixtures/: e2e_seed.json
backend/e2e/tests/: test_access_and_assessment.py  test_api_contracts.py  test_application_lifecycle.py  test_hello_world.py  test_routing_smoke.py
backend/processes/: admin.py  models.py  serialisers.py
backend/processes/migrations/: 0001_initial.py  0002_authorisationprocess_reviewer_groups.py
backend/processes/tests/: test_models.py  test_serialisers.py
backend/questionnaire/: admin.py  forms.py  models.py  serialisers.py  urls.py  views.py
backend/questionnaire/migrations/: 0001_initial.py
backend/questionnaire/templates/: questionnaire.html
backend/questionnaires/: admin.py  bugfix.py  forms.py  models.py  schema.py  serialisers.py
backend/questionnaires/management/commands/: normalise_questionnaire_sort_order.py
backend/questionnaires/migrations/: 0001_initial.py  0002_alter_questionnaire_created_by_and_more.py  0002_alter_questionnaire_document.py  0002_questionnairepermission_questionnairemembership_and_more.py  0003_remove_questionnaire_qnaire_unique_slug_version_desc_and_more.py  0004_backfill_questionnaire_code_from_name.py  0005_questionnaire_code_not_null_and_unique_constraint.py
backend/questionnaires/tests/: test_admin.py  test_management_commands.py  test_models.py  test_serialisers.py
backend/staticfiles/: init.txt
backend/templates/: 404.html  aec-template-test.html  application-pdf-template.html  base.html  error.html  my-applications.html  new-application.html  questionnaire.html  vite.html
backend/templates/admin/: change_form_object_tools.html
backend/users/: admin.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: test_admin.py  test_models.py
data/: aec-local.json  aec-uat.json  answers-2.json  answers.json  questionnaire-aec.json  questionnaire-s40.json  schema.json  temp.json
dockerdev/: Dockerfile
docs/: APPLICATION-FLOWS.md  ARCHITECTURE.md  BACKEND-CONVENTIONS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  FILE-MANAGEMENT.md  FRONTEND-CONVENTIONS.md  README.md  SECURITY.md  TESTING.md  authorisations-flows.md  file-attachments.md  installation.md  release.md  testing.md  tips.md
frontend/: .dockerignore  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  react-router.config.tsx  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: _middleware.tsx  index.css  main.tsx  pdf-icons.css  router.tsx  theme.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Common.tsx  ErrorPage.tsx  ReviewPage.tsx
frontend/src/context/: AnswersManager.tsx  ApiManager.tsx  Confetti.tsx  ConfigManager.tsx  Constants.tsx  DialogContext.ts  Dialogs.tsx  FormContext.tsx  FormTypes.tsx  Hooks.tsx  LocalStorage.tsx  (+7 more)
frontend_next/: eslint.config.mjs  next.config.ts  package.json
frontend_nextjs/: next.config.ts
kustomize/: README.md
kustomize/base/: deployment.yaml  deployment_hpa.yaml  service.yaml
scripts/: get_image_tag.py  sync_version.py  test_scripts.py
(+116 files in other folders)
