[project]
name = "authorisations"
version = "0.1.0"
description = "Animal Ethics & Section 40/45 approval process"
authors = [
    {name = "Ecoinformatics, BCS", email = "ecoinformatics.admin@dbca.wa.gov.au"}
]
readme = "README.md"
requires-python = "<4,>=3.12"
dependencies = [
    "Django (==5.2)",
    "psycopg (>=3.2.6,<4.0.0)",
    "django-vite (>=3.1.0,<4.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "jsonschema (>=4.24.0,<5.0.0)",
    "drf-jsonschema-serializer (>=3.0.0,<4.0.0)",
    "django-jsonform (>=2.23.2,<3.0.0)",
    "django-admin-tools (>=0.9.3,<0.10.0)",
    "frozendict (>=2.4.6,<3.0.0)",
    "dbca-utils (>=2.1.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
#packages = [
#    { include = "my_package" },
#    # { include = "extra_package/**/*.py" },
#]
[tool.poetry.group.dev.dependencies]
ipython = "^9.2.0"

